# KOI

./: KOI.cabal  cabal.project
interact/: KOI-interact.cabal
interact/src/KOI/: AppTypes.hs  Interact.hs  InteractImpl.hs  Server.hs
src/KOI/: Basics.hs  ColorPicker.hs  InteractImpl.hs  Options.hs  RNG.hs  RNGM.hs  ResourceQ.hs  SaveLoad.hs  Utils.hs
template/: .gitignore  package-lock.json  package.json  template.cabal
template/src/: Main.hs
template/src/App/: Input.hs  KOI.hs  State.hs
template/src/ui/: index.html  main.js  main.ts  style.css
template/src/ui/common-js/: connect.js  connect.ts  template.js
template/src/ui/components/value/: value.ts
utils/: KOI-utils.cabal
utils/src/: Test.hs
utils/src/KOI/: Bag.hs  CallJS.hs  ColorPicker.hs  DeriveTS.hs  Enum.hs  Field.hs  Options.hs  PP.hs  RNG.hs  ResourceQ.hs
