cabal-version:       3.0
name:                KOI
version:             0.1.0.0
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules:
    KOI.Interact,
    KOI.Basics,
    KOI.Utils,
    KOI.Bag,
    KOI.ResourceQ,
    KOI.CallJS,
    KOI.Enum,
    KOI.RNG,
    KOI.RNGM,
    KOI.SaveLoad,
    KOI.ColorPicker,
    KOI.Options,
    KOI.PP,

  other-modules:
    KOI.InteractImpl
    KOI.Server
    KOI.AppTypes
  build-depends:
    base >=4.13,
    containers, text, aeson, bytestring, vector, optics,
    websockets-snap, snap-core, websockets, snap-server,
    tf-random, pretty,
    zlib, base64-bytestring,
    template-haskell, th-abstraction
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:
    BlockArguments, ImportQualifiedPost, LambdaCase,
    OverloadedStrings, DeriveGeneric,
    RecordWildCards, ViewPatterns, GeneralizedNewtypeDeriving,
    TypeFamilies, FlexibleContexts,
    TemplateHaskell



