cabal-version:       >=2.0
name:                KOI-interact
version:             0.1.0.0
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules:
    KOI.Interact
  other-modules:
    KOI.InteractImpl
    KOI.Server
    KOI.AppTypes
  build-depends:
    base >=4.13,
    KOI-utils,
    containers, text, aeson, bytestring,
    optics,
    websockets-snap, snap-core, websockets, snap-server
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:
    BlockArguments, OverloadedStrings, DeriveGeneric,
    TypeFamilies, FlexibleContexts, TemplateHaskell


